# RelatorioInvoices

./: .gitignore  UiCompiler.py  app.py  layout.ui  modules.py  pyproject.toml  requirements.txt  tabular.py  ui_layout.py
modules/: DataframeInvoices.py  Datamodel.py  OCR.py
